--- a/jekyll/_layouts/home.html
+++ b/jekyll/_layouts/home.html
@@ -1,4 +1,6 @@
-{% include_remote http://localhost/~rafaparadela/cdn47/microsites/home.html %}
+{% include_remote https://rawgit.com/47deg/microsites/cdn/home.html %}
 
 
 <!-- https://cdn.rawgit.com/47deg/microsites/cdn/home.html  -->
+<!-- https://rawgit.com/47deg/microsites/cdn/home.html  -->
+<!-- http://localhost/~rafaparadela/cdn47/microsites/home.html  -->
