--- a/tools/scss/styles/_variables_palette.scss
+++ b/tools/scss/styles/_variables_palette.scss
@@ -1,9 +1,9 @@
 // Theme colors
-$brand-primary:                   #02B4E5;
-$brand-secondary:                 #273841;
-$brand-tertiary:                  #1D2A30;
-$gray-dark:                       #444444;
-$gray:                            #808088;
-$gray-light:                      #E0E0E0;
-$gray-lighter:                    #F4F4F4;
+$brand-primary:                   #FF518C;
+$brand-secondary:                 #2F2859;
+$brand-tertiary:                  #28224C;
+$gray-dark:                       #48474C;
+$gray:                            #8D8C92;
+$gray-light:                      #EBEAF1;
+$gray-lighter:                    #F4F3F9;
 $white-color:                     #FFFFFF;
