Fixed technologies icons and padding use

--- a/tools/scss/styles/_bootstrap.scss
+++ b/tools/scss/styles/_bootstrap.scss
@@ -35,9 +35,7 @@ body {
     padding-bottom: $jumbotron-padding;
     margin-bottom: 0;
     background-attachment: fixed;
-    @include image-2x('../img/jumbotron_pattern2x.png',
-    56px,
-    31px);
+    //@include image-2x('../img/jumbotron_pattern2x.png', 56px,31px);
     h1 {
         margin-bottom: ($line-height-computed * 1.8);
     }
