--- a/tools/scss/styles/_docs.scss
+++ b/tools/scss/styles/_docs.scss
@@ -92,7 +92,7 @@
                 border-radius: 0;
             }
             .hljs {
-                padding: ($line-height-computed * 1.3);
+                padding: $line-height-computed;
                 background: none;
             }
         }
