Fixed technologies icons + fixed hover doc

--- a/tools/scss/styles/_bootstrap.scss
+++ b/tools/scss/styles/_bootstrap.scss
@@ -72,7 +72,7 @@ pre {
         border-radius: 0;
     }
     .hljs {
-        padding: ($line-height-computed * 1.3);
+        padding: $line-height-computed;
         background: none;
     }
 }
