--- a/tools/scss/styles/_variables_palette.scss
+++ b/tools/scss/styles/_variables_palette.scss
@@ -1,9 +1,9 @@
 // Theme colors
-$brand-primary:                   #FF9900;
-$brand-secondary:                 #3D3832;
-$brand-tertiary:                  #312E29;
-$gray-dark:                       #393735;
-$gray:                            #85817D;
-$gray-light:                      #E4E3E3;
-$gray-lighter:                    #F5F4F4;
+$brand-primary:                   #FF518C;
+$brand-secondary:                 #2F2859;
+$brand-tertiary:                  #28224C;
+$gray-dark:                       #48474C;
+$gray:                            #8D8C92;
+$gray-light:                      #EBEAF1;
+$gray-lighter:                    #F4F3F9;
 $white-color:                     #FFFFFF;
