Applied some visual improvements

--- a/tools/scss/styles/_bootstrap.scss
+++ b/tools/scss/styles/_bootstrap.scss
@@ -72,8 +72,7 @@ pre {
         border-radius: 0;
     }
     .hljs {
-        padding: $line-height-computed;
-        background: none;
+        padding: 10px;
     }
 }
 
