import cdn resources using site variable + added some extra variables to customize organization info

--- a/jekyll/_layouts/docs.html
+++ b/jekyll/_layouts/docs.html
@@ -1,4 +1,4 @@
-{% include_remote https://rawgit.com/47deg/microsites/cdn/docs.html %}
+{% include_remote {{ site.cdn.url }}/docs.html %}
 
 <!-- https://cdn.rawgit.com/47deg/microsites/cdn/docs.html -->
 <!-- https://rawgit.com/47deg/microsites/cdn/docs.html -->
