--- a/jekyll/_layouts/home.html
+++ b/jekyll/_layouts/home.html
@@ -1,4 +1,4 @@
-{% include_remote https://rawgit.com/47deg/microsites/cdn/home.html %}
+{% include_remote {{ site.cdn.url }}/home.html %}
 
 
 <!-- https://cdn.rawgit.com/47deg/microsites/cdn/home.html  -->
