Fixed brand text

--- a/tools/scss/styles/_variables_palette.scss
+++ b/tools/scss/styles/_variables_palette.scss
@@ -1,9 +1,9 @@
 // Theme colors
-$brand-primary:                   #FF518C;
-$brand-secondary:                 #2F2859;
-$brand-tertiary:                  #28224C;
-$gray-dark:                       #48474C;
-$gray:                            #8D8C92;
-$gray-light:                      #EBEAF1;
-$gray-lighter:                    #F4F3F9;
+$brand-primary:                   #E05236;
+$brand-secondary:                 #3F3242;
+$brand-tertiary:                  #2D232F;
+$gray-dark:                       #453E46;
+$gray:                            #837F84;
+$gray-light:                      #E3E2E3;
+$gray-lighter:                    #F4F3F4;
 $white-color:                     #FFFFFF;
